[package]
name = "llm-summarse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
hf-hub = "0.4.1"
tokenizers = "0.21"
half = "=2.4.1"
rand = "0.8.6"
rand_distr = "=0.4.3"
serde_json = "1"
# candle-core = { version = "0.5.1", features = ["cuda", "metal"] }
# candle-transformers = "0.5.1"
# candle-nn = "0.5.1"
tokio = { version = "1", features = ["full"] }

# For macOS (Apple Silicon or Intel)
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.5.1", features = ["metal"] }
candle-nn = { version = "0.5.1", features = ["metal"] }
candle-transformers = { version = "0.5.1", features = ["metal"] }

# For Windows/Linux (Attempts CUDA, falls back to CPU at runtime)
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.5.1", features = ["cuda"] }
candle-nn = { version = "0.5.1", features = ["cuda"] }
candle-transformers = { version = "0.5.1", features = ["cuda"] }